<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pegasusconnect.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_home"
        android:title="@string/action_menu_home"
       />
    
    <item 
        android:id="@+id/action_view_status"
        android:title="@string/View_Status"
       />
    
    <item 
        android:id="@+id/action_set_parameters"
        android:title="@string/Set_Parameters"
        />
    
    <item 
        android:id="@+id/action_view_flight_data"
        android:title="@string/view_flight_data"
     />
    
    <item 
        android:id="@+id/action_pair_device"
        android:title="@string/pair_your_pegasus"
        />
        
</menu>
