<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pegasusconnect.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_pegasus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_metric_units"
        android:layout_alignParentBottom="true"
        android:text="@string/authors"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_metric_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="43dp"
        android:onClick="set_metric_units"
        android:text="@string/select_metric_units" />

    <Button
        android:id="@+id/button_imperial_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_metric_units"
        android:layout_alignBottom="@+id/button_metric_units"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="14dp"
        android:onClick="set_imperial_units"
        android:text="@string/select_imperial_units" />

</RelativeLayout>